disk 문제 풀이 완성
disk 1~7번 문제 풀이 완성하였습니다

--- a/혼공_예제연습/disk 예제/disk.html
+++ b/혼공_예제연습/disk 예제/disk.html
@@ -91,6 +91,7 @@
         margin: 0;
       }
 
+      /*innerHTML로 li > img 태그를 만들었는데 왜 ul li img이 아닌 ul img 속성이 적용되지? */
       .list_btn_group ul img {
         width: 64px;
         height: 64px;
